--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-EMAIL_ADDRESS=2200039096@kluniversity.in
-EMAIL_PASSWORD=Bvk@100505
+EMAIL_ADDRESS=your_email@example.com
+EMAIL_PASSWORD=your_password
