--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.1",
     "hackathon": "file:",
     "nodemailer": "^6.9.16",
-    "pdfkit": "^0.15.1"
+    "pdfkit": "^0.15.1",
+    "xlsx": "^0.18.5"
   }
 }
