--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 EMAIL_ADDRESS=your_email@example.com
-EMAIL_PASSWORD=your_password
-
+EMAIL_PASSWORD=your_email_password
+SMTP_SERVER=smtp.office365.com
+SMTP_PORT=587
