--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
+    "canvas": "^2.11.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "excel4node": "^1.8.2",
@@ -19,5 +20,6 @@
     "nodemailer": "^6.9.16",
     "pdfkit": "^0.15.1",
     "xlsx": "^0.18.5"
-  }
+  },
+  "description": ""
 }
