--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-EMAIL_ADDRESS=your_email@example.com
-EMAIL_PASSWORD=your_email_password
-SMTP_SERVER=smtp.office365.com
+SMTP_HOST=smtp.office365.com
 SMTP_PORT=587
+SMTP_SECURE=false
+EMAIL_ADDRESS=2200039096@kluniversity.in
+EMAIL_PASSWORD=Bvk@100505
